2007-12-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, src/interface.c, src/msgwindow.c, src/plugins.c:
   Set treeview rules hint for several treeviews and remove manual
   setting the background colour of odd rows of the status and message
   treeviews (closes #1848901).
 * src/vte.c: Enable dragging of text into the VTE.
 * src/msgwindow.c: Fix crashes when clicking on message window items
                    introduced with changing rules hints for treeviews.
 * configure.in, src/Makefile.am, src/main.c, src/plugins.c,
   src/prefix.c, src/prefix.h, src/symbols.c:
   Add binary relocation support.


2007-12-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.spec.in: Apply patch from Yura Siamashka and Dominic Hopf
                  to fix build of rpm package (thanks).
 * src/win32.c: Fix wrong file filters in file dialogs opened in the
                preferences dialog.
 * src/keyfile.c: Fix wrong debug display of filenames which could not
                  be loaded from last session.


2007-12-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/project.c, src/ui_utils.c, src/win32.c, src/win32.h:
   Fix wrong file filters in project-related file dialogs on Windows.


2007-12-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.html, doc/geany.txt, src/callbacks.c, src/document.c,
   src/document.h, src/encodings.c, src/encodings.h, src/keyfile.c,
   src/main.c:
   Store more document-related settings session-based in the
   configuration file(including the file encoding).
   Detect in-file specified file encoding by scanning the file using
   regular expressions.


2007-12-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c, src/vte.c, src/vte.h:
   Prevent execution of commands by Geany if the VTE may contain any
   text on the prompt (thanks to "Jeff Pohlmeyer for reporting).


2007-12-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
