@@ -1,3 +1,9 @@
+2007-12-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/build.c: Fix Run command for HTML files when set to something
+                else than "builtin".
+
+
 2007-12-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * geany.glade, src/interface.c, src/msgwindow.c, src/plugins.c:
